# svg2gcode

./: .gitignore  Cargo.toml  README.md  RELEASE_SUMMARY.md  RELEASING.md  index.html  svg2gcode-web-5926e4dfb288e7ed.js  svg2gcode-web-5926e4dfb288e7ed_bg.wasm  svg2gcode-web-fec56534d7ce22f3.js  svg2gcode-web-fec56534d7ce22f3_bg.wasm
.github/: copilot-instructions.md
.github/workflows/: wasm-publish.yml
cli/src/: main.rs
crates/svg2gcode-wasm/: .npmignore  Cargo.toml  README.md  package.json
crates/svg2gcode-wasm/src/: lib.rs
crates/svg2gcode-wasm/tests/: alignment_trim.rs
lib/examples/: align_trim.rs  alignment_check.rs  between_layers_order.rs
lib/src/: arc.rs  lib.rs  machine.rs  postprocess.rs
lib/src/converter/: mod.rs  units.rs  visit.rs
lib/src/turtle/: dpi.rs  g_code.rs  mod.rs  preprocess.rs
lib/tests/: alignment_trim_tests.rs
testing/: INSTRUCTIONS.md  README.md
testing/output/: current_schema.json  test.gcode
testing/output/with_arcs/: test_circles_with_arcs.gcode
testing/output/without_arcs/: svg-2_without_arcs.gcode  test_snakes_without_arcs.gcode
testing/scripts/: analyze_output.ps1  run_tests.ps1  run_tests.sh  run_tests_simple.ps1  validate_schema.js
testing/settings/: high_precision.json  polygon_arc_disabled.json  polygon_arc_enabled.json  polygon_arc_settings.json  production.json
tools/alignment_check/: Cargo.toml
tools/alignment_check/src/: main.rs  verify.rs
tools/alignment_check/tests/: alignment_tests.rs
web/: Cargo.toml
web/src/: main.rs  state.rs
web/src/forms/: editors.rs  mod.rs
