[package]
name = "svg2gcode-wasm"
version = "0.1.10"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
svg2gcode = { path = "../../lib", features = ["serde"] }
roxmltree = "0.19"
g-code = "0.5.1"
schemars = "0.8"
serde_json = "1.0"
svgtypes = { workspace = true }

[features]
serde = ["svg2gcode/serde"]

[profile.release]
opt-level = "s"
lto = true